--- a/package.json
+++ b/package.json
@@ -1,59 +1,49 @@
 {
-    "name": "Srini-Angular6-poc",
-    "version": "1.0.0",
-    "license": "MIT",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build --prod",
-        "gitbuild": "ng build --prod",
-        "test": "ng test",
-        "test-ci": "TEST_CI=true ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
+  "name": "new-shopping-bag",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "axios": "^1.3.4",
+    "core-js": "^3.8.3",
+    "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
     },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^6.0.0",
-        "@angular/common": "^6.0.0",
-        "@angular/compiler": "^6.0.0",
-        "@angular/core": "^6.0.0",
-        "@angular/forms": "^6.0.0",
-        "@angular/http": "^6.0.0",
-        "@angular/platform-browser": "^6.0.0",
-        "@angular/platform-browser-dynamic": "^6.0.0",
-        "@angular/router": "^6.0.0",
-        "@ng-bootstrap/ng-bootstrap": "^2.0.0",
-        "@ngx-translate/core": "^10.0.1",
-        "@ngx-translate/http-loader": "^3.0.1",
-        "chart.js": "^2.7.2",
-        "core-js": "^2.5.5",
-        "font-awesome": "^4.7.0",
-        "ng2-charts": "^1.6.0",
-        "rxjs": "^6.1.0",
-        "yarn": "^1.6.0",
-        "zone.js": "^0.8.26"
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
     },
-    "devDependencies": {
-        "@angular/cli": "6.0.0",
-        "@angular/compiler-cli": "^6.0.0",
-        "@angular/language-service": "^6.0.0",
-        "@types/jasmine": "~2.8.6",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "^9.6.1",
-        "codelyzer": "~4.2.1",
-        "jasmine-core": "~3.1.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~2.0.0",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-cli": "~1.0.1",
-        "karma-coverage-istanbul-reporter": "^1.4.2",
-        "karma-jasmine": "~1.1.1",
-        "karma-jasmine-html-reporter": "^1.0.0",
-        "protractor": "~5.3.0",
-        "ts-node": "~5.0.1",
-        "tslint": "~5.9.1",
-        "typescript": "~2.7.0",
-        "@angular-devkit/build-angular": "~0.6.0"
-    }
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
